// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodDetails renders a dash if no card was provided 1`] = `
<div>
  <span>
    –
  </span>
</div>
`;

exports[`PaymentMethodDetails renders a valid card brand and last 4 digits 1`] = `
<div>
  <span
    class="payment-method-details"
  >
    <span
      class="payment-method__brand payment-method__brand--visa"
    />
     •••• 
    4242
  </span>
</div>
`;
